--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>spider-tv-landing</title>
-    <meta name="description" content="Lovable Generated Project" />
+    <title>Spider Tv 4K - سبايدر تي في </title>
+    <meta name="description" content="سبايدر تي في اقوي اشتراك في الكويت بجودة عالية Spider Tv 4K" />
     <meta name="author" content="Lovable" />
     <meta property="og:image" content="/og-image.png" />
   </head>
