--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="سبايدر تي في اقوي اشتراك في الكويت بجودة عالية Spider Tv 4K" />
     <meta name="author" content="Lovable" />
     <meta property="og:image" content="/og-image.png" />
+    <meta name="google-site-verification" content="a0cvc_DXyj3suRTr8wM-71qqubAIof1z3JGXLicy0xY" />
   </head>
 
   <body>
