--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <meta name="author" content="Lovable" />
     <meta property="og:image" content="/og-image.png" />
     <meta name="google-site-verification" content="a0cvc_DXyj3suRTr8wM-71qqubAIof1z3JGXLicy0xY" />
+    <script>
+					var clickRankAi = document.createElement("script");
+
+					clickRankAi.src = "https://js.clickrank.ai/seo/f70bcc48-6b57-44da-8b87-dae2881fd5f6/script?" + new Date().getTime();
+					clickRankAi.async = true;
+
+					document.head.appendChild(clickRankAi);
+		</script>
   </head>
 
   <body>
