--- a/index.html
+++ b/index.html
@@ -16,6 +16,23 @@
 
 					document.head.appendChild(clickRankAi);
 		</script>
+		  <!-- Snap Pixel Code -->
+		<script type='text/javascript'>
+		(function(e,t,n){if(e.snaptr)return;var a=e.snaptr=function()
+		{a.handleRequest?a.handleRequest.apply(a,arguments):a.queue.push(arguments)};
+		a.queue=[];var s='script';r=t.createElement(s);r.async=!0;
+		r.src=n;var u=t.getElementsByTagName(s)[0];
+		u.parentNode.insertBefore(r,u);})(window,document,
+		'https://sc-static.net/scevent.min.js');
+		
+		snaptr('init', '7800a70b-d2fd-40e1-84d9-4b0e06f2cdde', {
+		'user_email': '__INSERT_USER_EMAIL__'
+		});
+		
+		snaptr('track', 'PAGE_VIEW');
+		
+		</script>
+		<!-- End Snap Pixel Code -->
   </head>
 
   <body>
